--- a/apps/frontend/Pages/Storefront/Pages/Storefront.razor
+++ b/apps/frontend/Pages/Storefront/Pages/Storefront.razor
@@ -37,7 +37,7 @@
         {
             layout?.SetBreadcrumbs(new List<BreadcrumbItem>
             {
-                new() { Title = "Home", Url = "/" },
+                new() { Title = "Home", Url = "/storefront" },
                 new() { Title = "Products", Url = "/storefront" }
             });
         }
